--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -1,5 +1,5 @@
-@import "../node_modules/tailwindcss/dist/lib.d.mts";
-@import "styles.css";
+@import "tailwindcss";
+@import "@radix-ui/themes/styles.css";
 
 :root {
   --background: #ffffff;
@@ -9,8 +9,6 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
